--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "exports": "./src/index.ts",
   "scripts": {
     "start": "rimraf dist",
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --poll --inspect --exit-child src/infra/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --poll --inspect --exit-child src/infra/server.ts",
     "prebuild": "rimraf dist",
     "build": "ttsc",
     "build:w": "ttsc -w"
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.2",
     "fast-glob": "^3.2.12",
     "glob": "^8.0.3",
+    "mercadopago": "^1.5.16",
     "mongoose": "^6.6.1",
     "rimraf": "^5.0.1",
     "tsc-watch": "^5.0.3",
@@ -33,6 +34,7 @@
     "wio.db": "^4.0.22"
   },
   "devDependencies": {
+    "@types/mercadopago": "^1.5.8",
     "@types/node": "^18.7.23",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
