--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^5.0.1",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
+    "express": "^4.18.2",
     "fast-glob": "^3.2.12",
     "glob": "^8.0.3",
     "mercadopago": "^1.5.16",
@@ -34,6 +35,7 @@
     "wio.db": "^4.0.22"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/mercadopago": "^1.5.8",
     "@types/node": "^18.7.23",
     "ts-node": "^10.9.1",
