--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "exports": "./src/index.ts",
   "scripts": {
     "start": "rimraf dist",
-    "dev": "ts-node-dev -r tsconfig-paths/register --poll --inspect --exit-child src/infra/server.ts",
+    "dev": "concurrently \"npm run dev:discord\" \"npm run dev:express\"",
+    "dev:discord": "ts-node-dev -r tsconfig-paths/register --poll --inspect=0.0.0.0:9230 --exit-child src/infra/server.ts",
+    "dev:express": "ts-node-dev -r tsconfig-paths/register --poll --inspect --exit-child src/infra/http/express/server.ts",
     "prebuild": "rimraf dist",
     "build": "ttsc",
     "build:w": "ttsc -w"
