--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/glob": "^8.0.0",
     "@types/mongoose": "^5.11.97",
     "chalk": "^5.0.1",
+    "concurrently": "^8.2.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.2",
