--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 TOKEN=your_token
 GUILD_ID=your_guild_id
 MERCADOPAGO_ACCESS_TOKEN=your_mercadopago_access_token
+MERCADOPAGO_REDIRECT_URL=https://your_url//payment/mercadopago/callback
+
+RABBITMQ_LOGIN_CREDENTIALS=amqp://admin:admin@localhost:5672
