--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MERCADOPAGO_ACCESS_TOKEN=APP_USR-8079530859839328-062816-af3dfbb008189a60f6f32fc
 MERCADOPAGO_CLIENT_ID=8079530859839328
 MERCADOPAGO_CLIENT_SECRET=hSRwAgwxPZk3IGDF3s81onZS7PDpAxdn
 MERCADOPAGO_REDIRECT_URL=https://leinadhosting.app/payment/mercadopago/callback
+RABBITMQ_LOGIN_CREDENTIALS=amqp://admin:admin@localhost:5672
