--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ MERCADOPAGO_ACCESS_TOKEN=your_mercadopago_access_token
 MERCADOPAGO_REDIRECT_URL=https://your_url//payment/mercadopago/callback
 
 RABBITMQ_LOGIN_CREDENTIALS=amqp://admin:admin@localhost:5672
+
+CHECKOUT_TIMEOUT_IN_MS=30000
