--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ MERCADOPAGO_REDIRECT_URL=https://your_url//payment/mercadopago/callback
 RABBITMQ_LOGIN_CREDENTIALS=amqp://admin:admin@localhost:5672
 
 CHECKOUT_TIMEOUT_IN_MS=30000
+
+PAYPAL_CLIENT_ID=your_paypal_client_id
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret
