--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/amqplib": "^0.10.1",
     "@types/glob": "^8.0.0",
     "@types/mongoose": "^5.11.97",
+    "@types/paypal-rest-sdk": "^1.7.6",
     "amqplib": "^0.10.3",
     "chalk": "^5.0.1",
     "concurrently": "^8.2.0",
@@ -32,6 +33,7 @@
     "glob": "^8.0.3",
     "mercadopago": "^1.5.16",
     "mongoose": "^6.6.1",
+    "paypal-rest-sdk": "^1.8.1",
     "rimraf": "^5.0.1",
     "tsc-watch": "^5.0.3",
     "ttypescript": "^1.5.15",
