--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/amqplib": "^0.10.1",
+    "@types/axios": "^0.14.0",
     "@types/glob": "^8.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/paypal-rest-sdk": "^1.7.6",
     "amqplib": "^0.10.3",
+    "axios": "^1.4.0",
     "chalk": "^5.0.1",
     "concurrently": "^8.2.0",
     "discord.js": "^14.3.0",
