--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,32 +3,45 @@ version: '3.9'
 services:
 
 
-  mongodb:
-    image: candis/mongo-replica-set
-    ports:
-      - "27017:27017"
-      - "27018:27018"
-      - "27019:27019"
-    environment:
-      # MONGO_INITDB_ROOT_USERNAME: user
-      # MONGO_INITDB_ROOT_PASSWORD: pass
-      MONGO_INITDB_DATABASE: data
-    volumes:
-      - ./.mongo-data:/data/db
+  # mongodb:
+  #   image: candis/mongo-replica-set
+  #   ports:
+  #     - "27017:27017"
+  #     - "27018:27018"
+  #     - "27019:27019"
+  #   environment:
+  #     # MONGO_INITDB_ROOT_USERNAME: user
+  #     # MONGO_INITDB_ROOT_PASSWORD: pass
+  #     MONGO_INITDB_DATABASE: data
+  #   volumes:
+  #     - ./.mongo-data:/data/db
 
  
-  rabbitmq:
+  bot-rabbitmq:
     image: "rabbitmq:3.8-management-alpine"
     container_name: discord-bot-rabbitmq
     hostname: rabbitmq
     ports:
-      - "15672:15672"
-      - "5672:5672"
+      - "15673:15672"
+      - "5673:5672"
     volumes:
       - "./.rabbitmq_data:/var/lib/rabbitmq/mnesia"
     environment:
       - RABBITMQ_DEFAULT_USER=admin
       - RABBITMQ_DEFAULT_PASS=admin
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+
+
+  app:
+    build: .
+    command: sh -c "npm run build && npm run start"
+    ports:
+      - "80:5000"
+    volumes:
+      - .:/usr/src/app
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
 
 
 
