--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,8 @@ services:
 
   app:
     build: .
-    command: sh -c "npm run build && npm run start"
+    command: sh -c "npm run dev"
+    restart: always
     ports:
       - "80:5000"
     volumes:
