--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
 
   app:
     build: .
-    command: sh -c "npm run dev"
+    command: sh -c "npm run build && npm run start"
     restart: always
     ports:
       - "80:5000"
