--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "concurrently \"npm run dev:discord\" \"npm run dev:express\"",
     "dev:discord": "ts-node-dev -r tsconfig-paths/register --poll --inspect=0.0.0.0:9230 --exit-child src/infra/server.ts",
     "dev:express": "ts-node-dev -r tsconfig-paths/register --poll --inspect --exit-child src/infra/http/express/server.ts",
+    "docker:up": "docker compose --file docker-compose.dev.yaml up -d ",
+    "docker:down": "docker compose --file docker-compose.dev.yaml down -d ",
     "prebuild": "rimraf dist",
     "build": "ttsc",
     "build:w": "ttsc -w"
